--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -32,12 +32,11 @@
 
         <audio id="backgroundMusic" loop>
             <source src="../media/backgroundMusic.mp3" type="audio/mp3">
-            Seu navegador não suporta áudio.
         </audio>
         
     </div>
 
 </body>
-<script src="/script.js"></script>
+<script src="../../script.js"></script>
 
 </html>
