--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@
 <head>
     <meta charset="UTF-8"> <!-- Define a codificação de caracteres para suportar caracteres especiais -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- Responsividade para dispositivos móveis -->
-    <link rel="stylesheet" href="../css/default.css"> <!-- Importa o arquivo de estilos CSS -->
-    <link rel="shortcut icon" href="../media/icon.png" type="image/x-icon">
+    <link rel="stylesheet" href="./src/css/default.css"> <!-- Importa o arquivo de estilos CSS -->
+    <link rel="shortcut icon" href="./src/media/icon.png" type="image/x-icon">
     <title>Jogo da Velha</title> <!-- Define o título da página -->
 </head>
 
-<body style="background-image: url('../media/background.jpg')"> <!-- Define a imagem de fundo da página -->
+<body style="background-image: url('./src/media/background.jpg')"> <!-- Define a imagem de fundo da página -->
 
     <div class="container"> <!-- Contêiner principal do jogo -->
         <h1>Jogo da Velha</h1> <!-- Título principal -->
@@ -44,11 +44,11 @@
 
         <!-- Elemento de áudio para a música de fundo -->
         <audio id="backgroundMusic" loop>
-            <source src="../media/backgroundMusic.mp3" type="audio/mp3"> <!-- Fonte do arquivo de áudio -->
+            <source src="./src/media/backgroundMusic.mp3" type="audio/mp3"> <!-- Fonte do arquivo de áudio -->
         </audio>
     </div>
 
 </body>
-<script type="module" src="../../main.js"></script> <!-- Importa o script principal do jogo -->
+<script type="module" src="main.js"></script> <!-- Importa o script principal do jogo -->
 
 </html>
